Adds Books Content Type

--- a/theme/3step/index.twig
+++ b/theme/3step/index.twig
@@ -9,8 +9,10 @@
     <!-- Main Blog Content -->
     <div class="twelve columns" role="content">
         <h1 class="site-title">{{ app.config.general.sitename }}</h1>
-    <a class="download" id="donationdl">Download with donation!</a>
-    <a class="download" id="freedl">Download for free!</a>
+        <div class="downloads">
+            <a class="btn donationdl" id="donationdl">Download<br /><span>with donation</span></a>
+            <a class="btn freedl" id="freedl">Download<br /><span>for free</span></a>
+        </div>
 
     </div>
 
