--- a/theme/3step/_header.twig
+++ b/theme/3step/_header.twig
@@ -18,6 +18,7 @@
     <link href='http://fonts.googleapis.com/css?family=Alegreya:400italic,700italic,400,700' rel='stylesheet' type='text/css'>
     {# paths.theme is always a correct path to the current theme. Even if you rename the theme-folder,
        this will keep working. See the documentation on paths: http://docs.bolt.cm/internals#paths #}
+       <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ paths.theme }}stylesheets/foundation.css">
     <link rel="stylesheet" href="{{ paths.theme }}stylesheets/app.css">
 
@@ -28,8 +29,8 @@
     {# Bolt comes with Fancybox, as it's used in the backend. We can use it here, or
        you just swap it out for the image-viewing script of your choice. Or delete it altogether #}
     <script src="{{ paths.app }}view/lib/fancybox/jquery.fancybox.pack.js"></script>
-    <link rel="stylesheet" type="text/css" href="{{ paths.app }}view/lib/fancybox/jquery.fancybox.css">
 
+    <link rel="stylesheet" type="text/css" href="{{ paths.app }}view/lib/fancybox/jquery.fancybox.css">
     <script src="{{ paths.theme }}javascripts/app.js"></script>
 
 </head>
