--- a/theme/3step/stylesheets/app.css
+++ b/theme/3step/stylesheets/app.css
@@ -2,7 +2,7 @@ body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif; }
+  font-family: "Roboto Condensed", sans-serif; }
 
 p, li {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif; }
@@ -19,3 +19,39 @@ p, li {
 .site-title {
   text-transform: uppercase;
   text-align: center; }
+
+.downloads {
+  text-align: center; }
+
+.btn {
+  font-family: "Roboto Condensed", sans-serif;
+  text-transform: uppercase;
+  display: inline-block;
+  text-align: center;
+  margin: 0 auto;
+  font-size: 40px;
+  border-radius: 6px;
+  padding: 20px 20px 15px;
+  line-height: 25px;
+  font-weight: 700;
+  margin: 10px 20px;
+  cursor: pointer; }
+  .btn span {
+    font-size: 20px;
+    font-weight: normal;
+    text-transform: none; }
+
+.donationdl {
+  border-bottom: 1px solid #666666;
+  border-top: 1px solid #333333;
+  color: white;
+  background: #333;
+  -webkit-box-shadow: 0px 4px 0px #222222, 0px 9px 36px rgba(255, 255, 255, 0.3) inset;
+  box-shadow: 0px 4px 0px #222222, 0px 9px 36px rgba(255, 255, 255, 0.3) inset; }
+
+.freedl {
+  border: 1px solid #cccccc;
+  color: #333;
+  background: #eee;
+  -webkit-box-shadow: 0px 4px 0 #999999, 0px 9px 36px rgba(255, 255, 255, 0.3) inset;
+  box-shadow: 0px 4px 0 #999999, 0px 9px 36px rgba(255, 255, 255, 0.3) inset; }
