--- a/theme/3step/_header.twig
+++ b/theme/3step/_header.twig
@@ -32,6 +32,7 @@
 
     <link rel="stylesheet" type="text/css" href="{{ paths.app }}view/lib/fancybox/jquery.fancybox.css">
     <script src="{{ paths.theme }}javascripts/app.js"></script>
+    <script src="{{ paths.theme }}javascripts/script.js"></script>
 
 </head>
 <body>
