--- a/theme/3step/index.twig
+++ b/theme/3step/index.twig
@@ -10,10 +10,18 @@
     <div class="twelve columns" role="content">
         <h1 class="site-title">{{ app.config.general.sitename }}</h1>
         <div class="downloads">
-            <a class="btn donationdl" id="donationdl">Download<br /><span>with donation</span></a>
-            <a class="btn freedl" id="freedl">Download<br /><span>for free</span></a>
+            <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=scott%2etolinski%40gmail%2ecom&lc=US&item_name=3%20Step%20Test%20Prep&amount=10%2e00&currency_code=USD&no_note=0&cn=Add%20special%20instructions%20to%20the%20seller%3a&no_shipping=2&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted" class="btn donationdl" id="donationdl">Download<br /><span>with donation</span></a>
+            <a herf="#" class="btn freedl" id="freedl">Download<br /><span>for free</span></a>
         </div>
-
+        <div class="paypal-form">
+            <h3>Select Your Donation</h3>
+            <input type="radio" name="r" id="r1" onchange="disableTxt()" />$5<br/>
+            <input type="radio" name="r" id="r2" onchange="disableTxt()" />$10<br/>
+            <input type="radio" name="r" id="r2" onchange="disableTxt()" checked="checked" />$15<br/>
+            <input type="radio" name="r" id="r2" onchange="disableTxt()" checked="checked" />$25<br/>
+            <input type="radio" name="r" id="r3" onchange="enableTxt()" /><input placeholder="Enter Custom Amount" type="text" name="r" id="other" disabled="disabled" />
+            <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=scott%2etolinski%40gmail%2ecom&lc=US&item_name=3%20Step%20Test%20Prep&amount=15%2e00&currency_code=USD&no_note=0&cn=Add%20special%20instructions%20to%20the%20seller%3a&no_shipping=2&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted">Donate</a>
+        </div>
     </div>
 
 </div>
