--- a/theme/3step/stylesheets/app.css
+++ b/theme/3step/stylesheets/app.css
@@ -4,8 +4,15 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: "Roboto Condensed", sans-serif; }
 
+h3 {
+  font-size: 40px;
+  text-align: center; }
+
 p, li {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif; }
+
+a:hover {
+  color: inherit; }
 
 /*Top Bar*/
 .top-bar {
@@ -35,7 +42,12 @@ p, li {
   line-height: 25px;
   font-weight: 700;
   margin: 10px 20px;
-  cursor: pointer; }
+  cursor: pointer;
+  -webkit-transition: all 0.2s ease-out;
+  -moz-transition: all 0.2s ease-out;
+  -ms-transition: all 0.2s ease-out;
+  -o-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out; }
   .btn span {
     font-size: 20px;
     font-weight: normal;
@@ -48,6 +60,11 @@ p, li {
   background: #333;
   -webkit-box-shadow: 0px 4px 0px #222222, 0px 9px 36px rgba(255, 255, 255, 0.3) inset;
   box-shadow: 0px 4px 0px #222222, 0px 9px 36px rgba(255, 255, 255, 0.3) inset; }
+  .donationdl:hover {
+    background: #222;
+    -webkit-box-shadow: 0px 4px 0px #222222, 0px 9px 36px rgba(255, 255, 255, 0.1) inset;
+    box-shadow: 0px 4px 0px #222222, 0px 9px 36px rgba(255, 255, 255, 0.1) inset;
+    color: #ccc; }
 
 .freedl {
   border: 1px solid #cccccc;
@@ -55,3 +72,16 @@ p, li {
   background: #eee;
   -webkit-box-shadow: 0px 4px 0 #999999, 0px 9px 36px rgba(255, 255, 255, 0.3) inset;
   box-shadow: 0px 4px 0 #999999, 0px 9px 36px rgba(255, 255, 255, 0.3) inset; }
+
+.paypal-form {
+  display: none; }
+
+.donation-fields {
+  padding: 0 32%; }
+  .donation-fields .value {
+    font-size: 30px;
+    margin: 10px 0; }
+
+#other {
+  width: 200px;
+  display: inline; }
