--- a/theme/3step/stylesheets/app.scss
+++ b/theme/3step/stylesheets/app.scss
@@ -8,13 +8,18 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Roboto Condensed', sans-serif;
 }
-
+h3 {
+  font-size:40px;
+  text-align: center;
+}
 
 p, li {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
 }
 
-
+a:hover {
+  color: inherit;
+}
 
 /*Top Bar*/
 .top-bar {
@@ -51,6 +56,7 @@ p, li {
   font-weight: 700;
   margin: 10px 20px;
   cursor: pointer;
+  @include transition;
   span {
     font-size: 20px;
     font-weight: normal;
@@ -63,6 +69,11 @@ p, li {
   color: white;
   background: #333;
   @include box-shadow(0px 4px 0px #222, 0px 9px 36px rgba(white, 0.3) inset);
+  &:hover {
+    background: #222;
+    @include box-shadow(0px 4px 0px #222, 0px 9px 36px rgba(white, 0.1) inset);
+    color:#ccc;
+  }
 }
 .freedl {
   border: 1px solid #ccc;
@@ -71,4 +82,17 @@ p, li {
   @include box-shadow(0px 4px 0 #999, 0px 9px 36px rgba(white, 0.3) inset);
 }
 
-
+.paypal-form {
+  display: none;
+}
+.donation-fields {
+  padding: 0 32%;
+  .value {
+  font-size:30px;
+  margin:10px 0;
+  }
+}
+#other {
+  width:200px;
+  display: inline;
+}
